--- a/about.html
+++ b/about.html
@@ -13,13 +13,22 @@
 
         <header class="main-nav">
                 <ul class="nav-list">
-                    <li id="nav-name">r. madril</li>
+                    <li id="nav-name"><a href="madril-portfolio-main.html">r. madril</a></li>
                     <li id="nav-about"><a href="about.html">about</a></li>
                     <li id="nav-port"><a href="portfolio.html">portfolio</a></li>
                     <li id="nav-cont"><a href="contact.html">contact</a></li>
                 </ul>
         </header>
 
+        <div class="about-pg">
+
+        </div>
+        <div class="about-tucson">
+
+            <div class="text-tucson">
+            <p>my design is inspired by the minimalism and natural beauty of the american southwest</p>
+            </div>
+        </div>
 
         <div class="foot-main">
                 <ul class="cop-list">
