--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
         <header class="main-nav">
                 <ul class="nav-list">
-                    <li id="nav-name">r. madril</li>
+                    <li id="nav-name"><a href="madril-portfolio-main.html">r. madril</a></li>
                     <li id="nav-about"><a href="about.html">about</a></li>
                     <li id="nav-port"><a href="portfolio.html">portfolio</a></li>
                     <li id="nav-cont"><a href="contact.html">contact</a></li>
