--- a/madril-portfolio-main.html
+++ b/madril-portfolio-main.html
@@ -14,7 +14,7 @@
             <!--Navigation bar-->
             <header class="main-nav">
                 <ul class="nav-list">
-                    <li id="nav-name">r. madril</li>
+                    <li id="nav-name"><a href="madril-portfolio-main.html">r. madril</a></li>
                     <li id="nav-about"><a href="about.html">about</a></li>
                     <li id="nav-port"><a href="portfolio.html">portfolio</a></li>
                     <li id="nav-cont"><a href="contact.html">contact</a></li>
@@ -25,7 +25,7 @@
                 <div class="main-page-text">
                     <p>I'm Robert.</p>
                     <br>
-                    <p>This is what I make.</p>
+                    <p>Let's make something awe-inspiring. together.</p>
                 </div>
             </div>
 
